Uppdatering av text

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -303,7 +303,7 @@ gg_SFI$sfi_vistelsetid_tidsserie_Dalarna
 Från 1 januari 2025 har kraven på att delta i SFI skärpts. Deltagande är bl a begränsat till tre år och en individuell studieplan ska upprättas i samband med antagning. Det innebär att genomströmningstiderna behöver återgå till den nivå som rådde innan pandemin. 
 
 ## Utbildning
-En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv på många sätt, såsom hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en högre utbildning lever i allmänhet längre, har en genomsnittligt högre inkomst och mår i allmänhet bättre än de med lägre utbildning. Utbildningsnivån hos utrikes födda har därför en stor påverkan på möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har hela arbetslivet framför sig. Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken. 
+En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv på många sätt, såsom hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en högre utbildning lever generellt längre ([SCB](https://www.scb.se/hitta-statistik/statistik-efter-amne/befolkning-och-levnadsforhallanden/befolkningens-sammansattning-och-utveckling/demografisk-analys/pong/statistiknyhet/livslangd-efter-utbildningsniva/){target="_blank"}), har en genomsnittligt högre inkomst och mår i allmänhet bättre än de med lägre utbildning. Utbildningsnivån hos utrikes födda har därför en stor påverkan på möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har hela arbetslivet framför sig. Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken. 
 
 Att gruppen utrikes födda är en heterogen grupp blir tydligt när utbildningsnivån studeras (se diagram nedan). Den stora skillnaden mellan utrikes och inrikes födda är att en större andel av de utrikes födda har en förgymnasial utbildning, och en mindre andel gymnasial utbildning. Andelen personer som har eftergymnasial utbildning är ungefär densamma för inrikes och utrikes födda. Det är en lite högre andel kvinnor födda i Sverige med eftergymnasial utbildning än utrikes födda, men bland män är förhållandet det omvända.  Arbetskraftsinvandrare är generellt sett mer högutbildade än flyktinginvandrare, och skillnaderna i utbildningsnivå är även stora mellan olika ursprungsländer.
 
@@ -700,8 +700,7 @@ I Region Dalarnas rapport från 2019 konstaterades att många utrikes födda är
 
 ## Flyttmönster
 
-
-<span class = "kommentar"> Första gången vi pratar om flyttmönster, så det behövs nog någon kort introduktion. Typ flyttar delas upp i två typer, inrikes och utrikes </span>
+I den här rapporten delas flyttar upp i två typer, inrikes och utrikes. Inrikes flyttar är de som sker mellan olika län i Sverige, medan utrikes flyttar är de som sker mellan Sverige och andra länder och normalt benämns in- respektive utvandring. I texten nedan benämns nettot mellan inrikes in- och utflyttar inrikes flyttnetto alternativt inrikes flyttningsöverskott, medan nettot mellan utrikes in- och utflyttar benämns invandringsöverskott eller utrikes flyttnetto.
 
 Sedan slutet av 1990-talet har Dalarna haft ett negativt inrikes flyttnetto under en överväldigande majoritet av åren (se figuren nedan). I Dalarna är det framförallt unga personer som flyttar, vilket kan förklaras med att de flyttar för att studera och arbeta. Flyttar från Dalarna inrikes sker i första hand till antingen större eller näraliggande län. Flest flyttar skedde till Stockholm, följt av Västmanland och Uppsala (se [Befolkningsutvecklingen i Dalarna](https://region-dalarna.github.io/befolkningsutvecklingen_i_Dalarna/){target="_blank"}). Effekten av att unga flyttar från länet blir en allt mer ålderstigen befolkning.
 
